Main/ANTLR4_generated/ArnoldCParser.py
# Generated from grammar/ArnoldC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArnoldCParser ( Parser ):

    grammarFileName = "ArnoldC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IT'S SHOWTIME'", "'YOU HAVE BEEN TERMINATED'", 
                     "'TALK TO THE HAND'", "'I WANT TO ASK YOU A BUNCH OF QUESTIONS AND I WANT TO HAVE THEM ANSWERED IMMEDIATELY'", 
                     "'HEY CHRISTMAS TREE'", "'YOU SET US UP'", "'GET TO THE CHOPPER'", 
                     "'HERE IS MY INVITATION'", "'ENOUGH TALK'", "'GET UP'", 
                     "'GET DOWN'", "'YOU'RE FIRED'", "'HE HAD TO SPLIT'", 
                     "'I LET HIM GO'", "'YOU ARE NOT YOU YOU ARE ME'", "'LET OFF SOME STEAM BENNET'", 
                     "'KNOCK KNOCK'", "'CONSIDER THAT A DIVORCE'", "'BECAUSE I'M GOING TO SAY PLEASE'", 
                     "'BULLSHIT'", "'YOU HAVE NO RESPECT FOR LOGIC'", "'STICK AROUND'", 
                     "'CHILL'", "'LISTEN TO ME VERY CAREFULLY'", "'GIVE THESE PEOPLE AIR'", 
                     "'I NEED YOUR CLOTHES YOUR BOOTS AND YOUR MOTORCYCLE'", 
                     "'I'LL BE BACK'", "'HASTA LA VISTA, BABY'", "'DO IT NOW'", 
                     "'GET YOUR ASS TO MARS'", "'@NO PROBLEMO'", "'@I LIED'", 
                     "'WHAT THE FUCK DID I DO WRONG'" ]

    symbolicNames = [ "<INVALID>", "START", "END", "PRINT", "READ", "DECLARE", 
                      "SET_INIT", "ASSIGN_VAR_START", "ASSIGN_VAR_VALUE", 
                      "ASSIGN_VAR_END", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "EQ", "GT", "AND", "OR", "IF", "ELSE", "ENDIF", "WHILE", 
                      "ENDWHILE", "FUNC_START", "FUNC_NONVOID", "FUNC_ARGS", 
                      "RETURN", "FUNC_END", "CALL", "CALL_ASSIGN", "TRUE", 
                      "FALSE", "ERROR_TOKEN", "NUMBER", "STRING", "IDENTIFIER", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declaration = 2
    RULE_initValue = 3
    RULE_assignment = 4
    RULE_operation = 5
    RULE_operand = 6
    RULE_printStmt = 7
    RULE_ifStmt = 8
    RULE_whileStmt = 9
    RULE_funcDecl = 10
    RULE_funcArg = 11
    RULE_returnStmt = 12
    RULE_funcCallStmt = 13
    RULE_funcCallAssignStmt = 14

    ruleNames =  [ "program", "statement", "declaration", "initValue", "assignment", 
                   "operation", "operand", "printStmt", "ifStmt", "whileStmt", 
                   "funcDecl", "funcArg", "returnStmt", "funcCallStmt", 
                   "funcCallAssignStmt" ]

    EOF = Token.EOF
    START=1
    END=2
    PRINT=3
    READ=4
    DECLARE=5
    SET_INIT=6
    ASSIGN_VAR_START=7
    ASSIGN_VAR_VALUE=8
    ASSIGN_VAR_END=9
    ADD=10
    SUB=11
    MUL=12
    DIV=13
    MOD=14
    EQ=15
    GT=16
    AND=17
    OR=18
    IF=19
    ELSE=20
    ENDIF=21
    WHILE=22
    ENDWHILE=23
    FUNC_START=24
    FUNC_NONVOID=25
    FUNC_ARGS=26
    RETURN=27
    FUNC_END=28
    CALL=29
    CALL_ASSIGN=30
    TRUE=31
    FALSE=32
    ERROR_TOKEN=33
    NUMBER=34
    STRING=35
    IDENTIFIER=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(ArnoldCParser.START, 0)

        def END(self):
            return self.getToken(ArnoldCParser.END, 0)

        def EOF(self):
            return self.getToken(ArnoldCParser.EOF, 0)

        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.FuncDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.StatementContext,i)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ArnoldCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 30
                self.funcDecl()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(ArnoldCParser.START)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615331496) != 0):
                self.state = 37
                self.statement()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(ArnoldCParser.END)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 44
                self.funcDecl()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(ArnoldCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(ArnoldCParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ArnoldCParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.PrintStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.WhileStmtContext,0)


        def funcCallStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.FuncCallStmtContext,0)


        def funcCallAssignStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.FuncCallAssignStmtContext,0)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ArnoldCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.declaration()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.assignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.printStmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.ifStmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.whileStmt()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.funcCallStmt()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 7)
                self.state = 58
                self.funcCallAssignStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECLARE(self):
            return self.getToken(ArnoldCParser.DECLARE, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def SET_INIT(self):
            return self.getToken(ArnoldCParser.SET_INIT, 0)

        def initValue(self):
            return self.getTypedRuleContext(ArnoldCParser.InitValueContext,0)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ArnoldCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ArnoldCParser.DECLARE)
            self.state = 62
            self.match(ArnoldCParser.IDENTIFIER)
            self.state = 63
            self.match(ArnoldCParser.SET_INIT)
            self.state = 64
            self.initValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ArnoldCParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def TRUE(self):
            return self.getToken(ArnoldCParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ArnoldCParser.FALSE, 0)

        def getRuleIndex(self):
            return ArnoldCParser.RULE_initValue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitValue" ):
                return visitor.visitInitValue(self)
            else:
                return visitor.visitChildren(self)




    def initValue(self):

        localctx = ArnoldCParser.InitValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 92341796864) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN_VAR_START(self):
            return self.getToken(ArnoldCParser.ASSIGN_VAR_START, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def ASSIGN_VAR_VALUE(self):
            return self.getToken(ArnoldCParser.ASSIGN_VAR_VALUE, 0)

        def operand(self):
            return self.getTypedRuleContext(ArnoldCParser.OperandContext,0)


        def ASSIGN_VAR_END(self):
            return self.getToken(ArnoldCParser.ASSIGN_VAR_END, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.OperationContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.OperationContext,i)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ArnoldCParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ArnoldCParser.ASSIGN_VAR_START)
            self.state = 69
            self.match(ArnoldCParser.IDENTIFIER)
            self.state = 70
            self.match(ArnoldCParser.ASSIGN_VAR_VALUE)
            self.state = 71
            self.operand()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 523264) != 0):
                self.state = 72
                self.operation()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(ArnoldCParser.ASSIGN_VAR_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(ArnoldCParser.ADD, 0)

        def operand(self):
            return self.getTypedRuleContext(ArnoldCParser.OperandContext,0)


        def SUB(self):
            return self.getToken(ArnoldCParser.SUB, 0)

        def MUL(self):
            return self.getToken(ArnoldCParser.MUL, 0)

        def DIV(self):
            return self.getToken(ArnoldCParser.DIV, 0)

        def MOD(self):
            return self.getToken(ArnoldCParser.MOD, 0)

        def EQ(self):
            return self.getToken(ArnoldCParser.EQ, 0)

        def GT(self):
            return self.getToken(ArnoldCParser.GT, 0)

        def AND(self):
            return self.getToken(ArnoldCParser.AND, 0)

        def OR(self):
            return self.getToken(ArnoldCParser.OR, 0)

        def getRuleIndex(self):
            return ArnoldCParser.RULE_operation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = ArnoldCParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_operation)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(ArnoldCParser.ADD)
                self.state = 81
                self.operand()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(ArnoldCParser.SUB)
                self.state = 83
                self.operand()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(ArnoldCParser.MUL)
                self.state = 85
                self.operand()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(ArnoldCParser.DIV)
                self.state = 87
                self.operand()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.match(ArnoldCParser.MOD)
                self.state = 89
                self.operand()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.match(ArnoldCParser.EQ)
                self.state = 91
                self.operand()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.match(ArnoldCParser.GT)
                self.state = 93
                self.operand()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.match(ArnoldCParser.AND)
                self.state = 95
                self.operand()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 9)
                self.state = 96
                self.match(ArnoldCParser.OR)
                self.state = 97
                self.operand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ArnoldCParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def TRUE(self):
            return self.getToken(ArnoldCParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ArnoldCParser.FALSE, 0)

        def getRuleIndex(self):
            return ArnoldCParser.RULE_operand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = ArnoldCParser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 92341796864) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(ArnoldCParser.PRINT, 0)

        def STRING(self):
            return self.getToken(ArnoldCParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(ArnoldCParser.NUMBER, 0)

        def getRuleIndex(self):
            return ArnoldCParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = ArnoldCParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ArnoldCParser.PRINT)
            self.state = 103
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120259084288) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ArnoldCParser.IF, 0)

        def operand(self):
            return self.getTypedRuleContext(ArnoldCParser.OperandContext,0)


        def ENDIF(self):
            return self.getToken(ArnoldCParser.ENDIF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(ArnoldCParser.ELSE, 0)

        def getRuleIndex(self):
            return ArnoldCParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ArnoldCParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(ArnoldCParser.IF)
            self.state = 106
            self.operand()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615331496) != 0):
                self.state = 107
                self.statement()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 113
                self.match(ArnoldCParser.ELSE)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615331496) != 0):
                    self.state = 114
                    self.statement()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 122
            self.match(ArnoldCParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ArnoldCParser.WHILE, 0)

        def operand(self):
            return self.getTypedRuleContext(ArnoldCParser.OperandContext,0)


        def ENDWHILE(self):
            return self.getToken(ArnoldCParser.ENDWHILE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.StatementContext,i)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = ArnoldCParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ArnoldCParser.WHILE)
            self.state = 125
            self.operand()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615331496) != 0):
                self.state = 126
                self.statement()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(ArnoldCParser.ENDWHILE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_START(self):
            return self.getToken(ArnoldCParser.FUNC_START, 0)

        def IDENTIFIER(self):
            return self.getToken(ArnoldCParser.IDENTIFIER, 0)

        def FUNC_END(self):
            return self.getToken(ArnoldCParser.FUNC_END, 0)

        def funcArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.FuncArgContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.FuncArgContext,i)


        def FUNC_NONVOID(self):
            return self.getToken(ArnoldCParser.FUNC_NONVOID, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArnoldCParser.StatementContext)
            else:
                return self.getTypedRuleContext(ArnoldCParser.StatementContext,i)


        def returnStmt(self):
            return self.getTypedRuleContext(ArnoldCParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return ArnoldCParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = ArnoldCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(ArnoldCParser.FUNC_START)
            self.state = 135
            self.match(ArnoldCParser.IDENTIFIER)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 136
                self.funcArg()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 142
                self.match(ArnoldCParser.FUNC_NONVOID)


            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1615331496) != 0):
                self.state = 145
                self.statement()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 151
                self.returnStmt()

